@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.3
 Date: ????
-  Changes:
+  Fixes:
+    - Support quality correctly
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.2
 Date: 2025-08-20
